--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="#">Personal Website</a>
     <a href="#">Personal Siteplan</a>
     </nav>
+    <p>Caramon Stanley - WDD130</p>
     <footer>
       <p>My First Web Page 2023 &copy</p>
     </footer>
