--- a/wwr/index.html
+++ b/wwr/index.html
@@ -31,7 +31,7 @@
                 <a class='book' href="contactus.html">Book Now</a>
             </section>
         </div>
-        <main class="hom-grid">
+        <main class="home-grid">
             <section class="rivers-card">
                 <img class="card-img" src="images/rivers.jpeg" alt="river in forest">
                 <img class="icon" src="images/river_icon.png" alt="river icon">
