--- a/heliosesports/site-plan.html
+++ b/heliosesports/site-plan.html
@@ -87,8 +87,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">About Helios</a>
+        <a href="#">The Team</a>
       </nav>
       <hr>
       <h2>
@@ -99,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          About Helios <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          The Team  <!-- change this -->
         </div>
 
         <div class="top">
@@ -124,29 +124,55 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        <strong>Welcome hero message</strong><br>
+          “The dawn breaks on a new day.”
+          -Helios Esports
+
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="/heliosesports/images/OpticvFaze.jpeg" alt="image for homepage">
+        <img src="/heliosesports/images/OpenBracket.jpeg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>About Us</h3>
       <p>
-        [Written copy for the Page 2 here]
+       <strong>What is Helios?</strong><br> We’re a grassroots org for players and content creators with a staff passionate about esports. Officially established in 2023, with 15 years combined experience in industry, we hope to provide a nurturing environment for players and creators to grow and find success in esports and beyond.<br>
+
+       <strong>Looking to call Helios Esports home?</strong><br>
+      Helios is looking for players in Halo Infinite, Apex Legends, and Rocket League! Not a professional gamer? We have other positions open such as team manager, community member, and content creator! We have a team on hand to help you grow your following and outreach. <br>
+
+
+        <strong>Perks of joining Helios Esports</strong><br>
+        What we can offer:<br>
+        ~ A dope social media person<br>
+        ~ 100% of winnings<br>
+        ~ Honesty & transparency<br>
+        ~ Potential for plushies<br>
+
+        <strong>Tournaments:<br></strong>
+        -SSG Spartan Showdown<br>
+        -HCS Charlotte Online Open<br>
+
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="/heliosesports/images/HeliosText.png" alt="image for page">
+        <img src="/heliosesports/images/TheTeam.jpeg" alt="image for page">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>The Team</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Soap - Photo<br>
+        Broken Hawk - Photo <br>
+        Neon Ninja - Photo<br>
+        Blackout - Photo<br>
+        Fox - Photo <br> 
       </p>
       <p>Images for the Page 3</p>
+        <img src="/heliosesports/images/TheTeam.jpg" alt="image for page3">
+        <img src="/heliosesports/images/OnStage.jpg" alt="image for page3">
+       <!-- <img src="#" alt="image for page3">
         <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="#" alt="image for page3"><-->
 
       </ul>
       <hr>
