Fixed images pathing

--- a/heliosesports/site-plan.html
+++ b/heliosesports/site-plan.html
@@ -130,8 +130,8 @@
 
       </p>
       <p>Images for the Home page</p>
-        <img src="/heliosesports/images/OpticvFaze.jpeg" alt="image for homepage">
-        <img src="/heliosesports/images/OpenBracket.jpeg" alt="image for homepage">
+        <img src="images/OpticvFaze.jpeg" alt="image for homepage">
+        <img src="images/OpenBracket.jpeg" alt="image for homepage">
 
       </ul>
       <h3>About Us</h3>
@@ -155,8 +155,8 @@
 
       </p>
       <p>Images for the Page 2</p>
-        <img src="/heliosesports/images/HeliosText.png" alt="image for page">
-        <img src="/heliosesports/images/TheTeam.jpeg" alt="image for page">
+        <img src="images/HeliosText.png" alt="image for page">
+        <img src="images/TheTeam.jpeg" alt="image for page">
 
       </ul>
       <h3>The Team</h3>
@@ -168,8 +168,8 @@
         Fox - Photo <br> 
       </p>
       <p>Images for the Page 3</p>
-        <img src="/heliosesports/images/TheTeam.jpg" alt="image for page3">
-        <img src="/heliosesports/images/OnStage.jpg" alt="image for page3">
+        <img src="images/TheTeam.jpg" alt="image for page3">
+        <img src="images/OnStage.jpg" alt="image for page3">
        <!-- <img src="#" alt="image for page3">
         <img src="#" alt="image for page3">
         <img src="#" alt="image for page3"><-->
