--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -12,6 +12,12 @@
     <h1>Fox's Rafts Site Plan</h1>
     <h2>Caramon Stanley</h2>
     <h2>WDD 130-08</h2>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="faq.html">FAQ</a>
+      <a href="site-plan-rafting.html">Site Plan</a>
+      <a href="contactus.html">Contact Us</a>
+  </nav>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -119,9 +125,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>FAQ</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="images/p2raft.png" alt="page 2 wireframe">
   </main>
 </body>
 
