--- a/heliosesports/site-plan.html
+++ b/heliosesports/site-plan.html
@@ -184,21 +184,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        This will have a hero image of the HCS stage and a little usurp about upcoming events.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Site-Home.png" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>About Us</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        The bottom placeholder will be a timeline for our events which I have an idea for, but hope it will work.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Site-About-Us.png" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>The Team</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        This is a simple page to have an image with each of the team members with their names floating in each photo <br> (Assuming I get sent the headshots of each member).
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/Site-The-Team.png" alt="page 3 wireframe">
     </main>
   </body>
 
