--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -51,6 +51,7 @@
                     formElement.addEventListener('submit', function(e) {
                         // stop the form from doing the default action.
                         e.preventDefault();
+                        document.forms[0].reset();
                         // set the contents of our feedback element to a message letting the user know the form was submitted successfully. Notice that we pull the name that was entered in the form to personalize the message!
                         feedbackElement.innerHTML = 'Hello '+ formElement.user_name.value +'! Thank you for your message. We will get back with you as soon as possible!';
                         // make the feedback element visible.
