Finishing site acourding to my site plan

--- a/heliosesports/contactus.html
+++ b/heliosesports/contactus.html
@@ -24,6 +24,10 @@
         </header>
             <main class="contact_us">
                 <body>
+                    <div class="meetus">
+                        <h1 class="meet">Would you like to join?</h1>
+                        <p>Enter your details below so we may contact you</p>
+                    </div>
                     <div id="feedback"></div>
                     <form action="/my-handling-form-page" method="post">
                         <ul>
