--- a/heliosesports/index.html
+++ b/heliosesports/index.html
@@ -33,11 +33,11 @@
                 <a class='book' href="contactus.html">Join Now</a>
             </section>
         </div>
-        <main class="main">
-            <body>
-
-            </body>
-        </main>
+    </div>
+    <div class="intro">
+        <img class="main-img" src="images/OpenBracket.jpeg" alt="Open Bracekt">
+        <p class="main-intro">Helios has been active in the Halo franchise for 20 years with a combined 10 years experience in e-sports. Thier experience in the field make them a compitent team to help you forge your path in to the competitive field of online video games. Their influence in the scene has reached both #1 pro teams as well as the higher officials of gaming franchises. They offer unique insight and experiences to those who would like to take the next step in their career.</p>
+    </div>
         <footer>
             <div class="sep"></div>
             <p>Helios Esports &copy; 2023 - Caramon Stanley</p>
