--- a/heliosesports/theteam.html
+++ b/heliosesports/theteam.html
@@ -22,10 +22,35 @@
                 <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
-        <main class="theteam">
-            <body>
-
-            </body>
+        <main class="about">
+            <h1 class="team">Meet our Halo team!</h1>
+            <div class="theteam">
+                <section class="blk">
+                    <img class="player-img" src="images/blkout.jpg" alt="Blkout">
+                    <h2 class="player">Blkout</h2>
+                    <h3 class="position">Player</h3>
+                </section>
+                <section class="soap">
+                    <img class="player-img" src="images/soap.jpg" alt="Soap">
+                    <h2 class="player">Soap</h2>
+                    <h3 class="position">Player</h3>
+                </section>
+                <section class="hawk">
+                    <img class="player-img" src="images/hawk.jpeg" alt="Hawk">
+                    <h2 class="player">Broken Hawk</h2>
+                    <h3 class="position">Player</h3>
+                </section>
+                <section class="neon">
+                    <img class="player-img" src="images/neon.jpeg" alt="Neon">
+                    <h3 class="player">Neon Ninja</h3>
+                    <h4 class="position">Player</h4>
+                </section>
+                <section class="fox">
+                    <img class="player-img" src="images/fox.JPG" alt="Fox">
+                    <h2 class="player">Fox</h2>
+                    <h3 class="position">Coach</h3>
+                </section>
+            </div>    
         </main>
         <footer>
             <p>Helios Esports &copy; 2023 - Caramon Stanley</p>
