Fixed spacing, made reactive, and positionsing

--- a/heliosesports/index.html
+++ b/heliosesports/index.html
@@ -26,6 +26,7 @@
             <div id="hero-box">
                 <img id="hero-img" src="images/OpticvFaze.jpeg" alt="Main Stage">
             </div>
+            <div class="msg-box"></div>
             <section id="hero-msg">
                 <h1 class="home-title">The dawn breaks on a new day.</h1>
                 <h4>-Helios Esports</h4>
@@ -36,7 +37,7 @@
     </div>
     <div class="intro">
         <img class="main-img" src="images/OpenBracket.jpeg" alt="Open Bracekt">
-        <p class="main-intro">Helios has been active in the Halo franchise for 20 years with a combined 10 years experience in e-sports. Thier experience in the field make them a compitent team to help you forge your path in to the competitive field of online video games. Their influence in the scene has reached both #1 pro teams as well as the higher officials of gaming franchises. They offer unique insight and experiences to those who would like to take the next step in their career.</p>
+        <p class="main-intro">Helios has been active in the Halo franchise for 20 years with a combined 10 years experience in esports. Their experience in the field make them a compitent team to help you forge your path in to the competitive field of online video games. Their influence in the scene has reached both #1 pro teams as well as the higher officials of gaming franchises. They offer unique insight and experiences to those who would like to take the next step in their career.</p>
     </div>
         <footer>
             <div class="sep"></div>
