--- a/heliosesports/theteam.html
+++ b/heliosesports/theteam.html
@@ -27,28 +27,46 @@
             <div class="theteam">
                 <section class="blk">
                     <img class="player-img" src="images/blkout.jpg" alt="Blkout">
-                    <h2 class="player">Blkout</h2>
-                    <h3 class="position">Player</h3>
+                    <div class="socials">
+                        <h3 class="player">Blkout</h3>
+                        <p class="position">Player</p>
+                    </div>
                 </section>
                 <section class="soap">
                     <img class="player-img" src="images/soap.jpg" alt="Soap">
-                    <h2 class="player">Soap</h2>
-                    <h3 class="position">Player</h3>
+                    <div class="socials">
+                        <h3 class="player">Soap</h3>
+                        <p class="position">Player</p>
+                    </div>
                 </section>
                 <section class="hawk">
                     <img class="player-img" src="images/hawk.jpeg" alt="Hawk">
-                    <h2 class="player">Broken Hawk</h2>
-                    <h3 class="position">Player</h3>
+                    <div class="socials">
+                        <h3 class="player">Broken Hawk</h3>
+                        <p class="position">Player</p>
+                    </div>
                 </section>
                 <section class="neon">
                     <img class="player-img" src="images/neon.jpeg" alt="Neon">
-                    <h3 class="player">Neon Ninja</h3>
-                    <h4 class="position">Player</h4>
+                    <div class="socials">
+                        <h3 class="player">Neon Ninja</h3>
+                        <p class="position">Player</p>
+                    </div> 
                 </section>
                 <section class="fox">
                     <img class="player-img" src="images/fox.JPG" alt="Fox">
-                    <h2 class="player">Fox</h2>
-                    <h3 class="position">Coach</h3>
+                    <div class="socials">
+                        <h3 class="player">Fox</h3>
+                        <p class="position">Coach</p>
+                    </div>
+                    <div class="social-links">
+                        <a class="fox-twitch" href="https://twitch.tv/fox3455" target="_blank">
+                            <img src="images/twitch.png" alt="Fox Twitch">
+                        </a>
+                        <a class="fox-youtube" href="https://youtube.com/@fox3455" target="_blank">
+                            <img src="images/youtube.png" alt="Fox Youtube">
+                        </a>
+                    </div> 
                 </section>
             </div>    
         </main>
