updated icon continuity

--- a/heliosesports/aboutus.html
+++ b/heliosesports/aboutus.html
@@ -52,14 +52,14 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <p><a href="site-plan.html">Site Plan</a></p>
         <div class="social">
-            <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
+            <a href="https://youtube.com/@helios_gg" target="_blank">
+                <img src="images/yt.png" alt="youtube icon">
             </a>
-            <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
+            <a href="https://twitter.com/Helios_GG" target="_blank">
+                <img src="images/tw.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
+            <a href="https://instagram.com/gg_helios" target="_blank">
+                <img src="images/in.png" alt="instagram icon">
             </a>
         </div>
     </footer>    
