Tweaking for a nicer UI

--- a/heliosesports/contactus.html
+++ b/heliosesports/contactus.html
@@ -78,7 +78,7 @@
                     <img src="images/yt.png" alt="youtube icon">
                 </a>
                 <a href="https://twitter.com/Helios_GG" target="_blank">
-                    <img src="images/tw.png" alt="twitter icon">
+                    <img src="images/twb.png" alt="twitter icon">
                 </a>
                 <a href="https://instagram.com/gg_helios" target="_blank">
                     <img src="images/in.png" alt="instagram icon">
