--- a/heliosesports/theteam.html
+++ b/heliosesports/theteam.html
@@ -25,46 +25,69 @@
         <main class="about">
             <h1 class="team">Meet our Halo team!</h1>
             <div class="theteam">
-                <section class="blk">
+                <section class="card">
                     <img class="player-img" src="images/blkout.jpg" alt="Blkout">
                     <div class="socials">
                         <h3 class="player">Blkout</h3>
                         <p class="position">Player</p>
                     </div>
+                    <div class="social-links">
+                        <a class="twitter" href="https://twitter.com/300_blkout" target="_blank">
+                            <img src="images/tw.png" alt="Blkout Twitter">
+                        </a>
+                    </div>    
                 </section>
-                <section class="soap">
+                <section class="card">
                     <img class="player-img" src="images/soap.jpg" alt="Soap">
                     <div class="socials">
                         <h3 class="player">Soap</h3>
                         <p class="position">Player</p>
                     </div>
+                    <div class="social-links">
+                        <a class="twitter" href="https://twitter.com/Soap_Bomb" target="_blank">
+                            <img src="images/tw.png" alt="Soap Twitter">
+                        </a>
+                    </div>
                 </section>
-                <section class="hawk">
+                <section class="card">
                     <img class="player-img" src="images/hawk.jpeg" alt="Hawk">
                     <div class="socials">
                         <h3 class="player">Broken Hawk</h3>
                         <p class="position">Player</p>
                     </div>
+                    <div class="social-links">
+                        <a class="twitter" href="https://twitter.com/theBrokenHawk" target="_blank">
+                            <img src="images/tw.png" alt="Hawk Twitter">
+                        </a>
+                    </div>
                 </section>
-                <section class="neon">
+                <section class="card">
                     <img class="player-img" src="images/neon.jpeg" alt="Neon">
                     <div class="socials">
                         <h3 class="player">Neon Ninja</h3>
                         <p class="position">Player</p>
                     </div> 
+                    <div class="social-links">
+                        <a class="twitter" href="https://twitter.com/TheNeonNinja117" target="_blank">
+                            <img src="images/tw.png" alt="Neon Twitter">
+                        </a>
+                    </div>
                 </section>
-                <section class="fox">
+                <section class="card">
                     <img class="player-img" src="images/fox.JPG" alt="Fox">
                     <div class="socials">
                         <h3 class="player">Fox</h3>
                         <p class="position">Coach</p>
                     </div>
                     <div class="social-links">
-                        <a class="fox-twitch" href="https://twitch.tv/fox3455" target="_blank">
+                        <a class="twitch" href="https://twitch.tv/fox3455" target="_blank">
                             <img src="images/twitch.png" alt="Fox Twitch">
                         </a>
-                        <a class="fox-youtube" href="https://youtube.com/@fox3455" target="_blank">
+                        <a class="youtube" href="https://youtube.com/@fox3455" target="_blank">
                             <img src="images/youtube.png" alt="Fox Youtube">
+                        </a>
+                        <a class="twitter" href="https://twitter.com/300_blkout" target="_blank">
+                            <img src="images/tw.png" alt="Blkout Twitch">
                         </a>
                     </div> 
                 </section>
@@ -80,7 +103,7 @@
                     <img src="images/yt.png" alt="youtube icon">
                 </a>
                 <a href="https://twitter.com/Helios_GG" target="_blank">
-                    <img src="images/tw.png" alt="twitter icon">
+                    <img src="images/twb.png" alt="twitter icon">
                 </a>
                 <a href="https://instagram.com/gg_helios" target="_blank">
                     <img src="images/in.png" alt="instagram icon">
